fixed issue on mobile scroll button.

--- a/css/common.css
+++ b/css/common.css
@@ -232,6 +232,7 @@ nav {
       "landing-banner"
       "code"
   }
+
 }
 .landing-banner {
   display: flex;
@@ -381,10 +382,8 @@ pre {
 }
 .scroll-down{
   position: absolute;
-  margin: 0 auto;
   display: block;
   top: 90vh;
-  position: absolute;
   border: 0.25rem solid var(--dark-blue);
   border-radius: 100%;
   height: 2.5rem;
@@ -392,7 +391,10 @@ pre {
   -webkit-animation: sdb04 5s infinite;
   animation: sdb04 5s infinite;
   background-color: var(--light-blue);
-
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .scroll-button::after {
